[package]
name = "tdt"
description = "A collection of common dev tools that can be used from the command line. TerminalDevTools"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console = "0.16.0"
dialoguer = "0.12.0"
htmlescape = "0.3.1"
jsonwebtoken = "9.3.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
urlencoding = "2.1.3"
