[package]
name = "tdt"
description = "A collection of common dev tools that can be used from the command line. TerminalDevTools"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16.0"
htmlescape = "0.3.1"
urlencoding = "2.1.3"
