[package]
name = "tdt"
description = "A collection of common dev tools that can be used from the command line. TerminalDevTools"
version = "0.1.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16.0"
htmlescape = "0.3.1"
serde_json = "1.0.143"
serde_yaml_ng = "0.10.0"
toml = "0.9.5"
url = "2.5.7"
urlencoding = "2.1.3"
